Rename app to Dear AI, add Sarvam AI, refactor Vertex LLM

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # App
-APP_NAME="Mental Health Companion"
+APP_NAME="Dear AI"
 DEBUG=true
 
 # Database
@@ -36,6 +36,9 @@ FALKORDB_URL=redis://localhost:6379
 FALKOR_HOST=localhost
 FALKOR_PORT=6379
 FALKOR_GRAPH=dear_ai
+
+# SarvamAI
+SARVAM_API_KEY=...
 
 # Environment
 ENVIRONMENT=development
