Add database schema, update config

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@ APP_NAME="Dear AI"
 DEBUG=true
 
 # Database
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/mental_health_companion
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/dearai
 
 # JWT
 JWT_SECRET_KEY=your-super-secret-key-change-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
+REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # LLM – Vertex AI / Gemini
 LLM_PROVIDER=vertex
