--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
 services:
-  app:
-    build: .
-    container_name: dear-ai-app
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      falkordb:
-        condition: service_healthy
+  # app:
+  #   build: .
+  #   container_name: dear-ai-app
+  #   command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+  #   ports:
+  #     - "8000:8000"
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #     falkordb:
+  #       condition: service_healthy
 
   postgres:
     image: pgvector/pgvector:pg16
     container_name: dear-ai-postgres
     environment:
-      POSTGRES_USER: dearai
-      POSTGRES_PASSWORD: dearai
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: dearai
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_dearai:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U dearai"]
       interval: 10s
@@ -38,7 +38,7 @@ services:
     ports:
       - "6380:6379"
     volumes:
-      - redis_data:/data
+      - redis_dearai:/data
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -52,7 +52,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - falkor_data:/data
+      - falkor_dearai:/data
     command: >
       falkordb-server
       --save 60 1
@@ -64,6 +64,6 @@ services:
       retries: 5
 
 volumes:
-  postgres_data:
-  redis_data:
-  falkor_data:
+  postgres_dearai:
+  redis_dearai:
+  falkor_dearai:
