--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "fastapi>=0.115,<1.0",
     "uvicorn[standard]>=0.30,<1.0",
     # Configuration
-    "pydantic>=2.8,<3.0",
+    "pydantic[email]>=2.8,<3.0",
     "pydantic-settings>=2.4,<3.0",
     "python-dotenv>=1.0,<2.0",
     # Database – PostgreSQL async with pgvector
