Add Sarvam STT/TTS support and speech provider factory.

--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,12 @@ REFRESH_TOKEN_EXPIRE_DAYS=30
 LLM_PROVIDER=vertex
 VERTEX_PROJECT=your-gcp-project-id
 VERTEX_LOCATION=us-central1
-LLM_MODEL=gemini-2.5-flash
+LLM_MODEL=fine-tuned-model
+
+STT_PROVIDER=sarvam
+TTS_PROVIDER=sarvam
 
 # Hume.ai (STT + TTS + Emotion Detection)
-STT_PROVIDER=hume
-TTS_PROVIDER=hume
 HUME_API_KEY=your-hume-api-key
 HUME_SECRET_KEY=your-hume-secret-key
 HUME_TTS_VOICE=Kora
